mm_web_app/styles/pages/_home.scss
/*************************************
**************************************
These are the styles for
the home page
**************************************
**************************************/

.neal-hero {
  &.banner-hero {
    position: relative;
    min-height: 280px;
    padding-left: 1.25rem;
    padding-right: 1.25rem;
    -moz-animation: fadeIn 1s both;
    -webkit-animation: fadeIn 1s both;
    animation: fadeIn 1s both;
    margin-bottom: 0;
    background: url('/static/images/bg_hero.jpg') repeat-x fixed;
    h1 {
      line-height: 50px;
      @media (max-width: 1050px) {
        font-size: 2.375rem;
      }
      @media (max-width: 850px) {
        font-size: 2.25rem;
        line-height: 2.5rem;
      }
      @media (max-width: 650px) {
        font-size: 1.875rem;
      }
      @media (max-width: 590px) {
        font-size: 1.125rem;
        line-height: 1.75rem;
      }
      @media (max-width: 390px) {
        font-size: 1rem;
      }
    }
    .text-engine{
      color: #fff;
    }
    .hero-caption {
      p {
        @media (max-width: 850px) {
          font-size: 0.9375rem;
        }
      }
      @media (max-width: 590px) {
        margin-bottom: 0.833;
        font-size: 0.825rem;
      }
    }
    &:before {
      @include abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0);
      content: "";
      background-color: rgba(0, 0, 0, 0.5);
    }
    @media (max-width: 850px) {
      padding-top: 4rem;
      padding-bottom: 4rem;
    }
    @media (max-width: 590px) {
      padding-top: 3rem;
      padding-bottom: 3rem;
    }
    @media (min-width: 850px) {
      padding-top: 4rem;
      padding-bottom: 4rem;
    }
    @media (min-width: 1400px) {
      padding-top: 10rem;
      padding-bottom: 10rem;
    }
    &.banner-case {
      min-height: 250px;
      @media (min-width: 1400px) {
        padding-top: 5rem;
        padding-bottom: 5rem;
      }
    }
  }
}

.switch-browser {
  margin-top: 20px;
  .btn-login {
    margin: 0 7px;
    min-width: 97px;
    text-align: center;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    &:hover,
    &:focus {
      box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    }
  }
}

.icon-wrap {
  position: absolute;
  right: auto;
  top: 0;
  bottom: 0;
  width: 3rem;
  padding-top: 0.4rem;
  .icon-download {
    position: relative;
    display: block;
    width: 2rem;
    height: 0.8125rem;
    margin: auto;
    border: solid 0.3rem #fff;
    border-top: none;
    &:before,
    &:after {
      content: '';
      display: block;
      position: absolute;
      -moz-animation: icon-bounce .5s infinite alternate;
      -webkit-animation: icon-bounce .5s infinite alternate;
      animation: icon-bounce .5s infinite alternate;
    }
    &:before {
      left: 0.5rem;
      top: -0.5rem;
      width: 0.5rem;
      height: 0.5rem;
      background: #fff;
    }
    &:after {
      left: 0.25rem;
      top: -0.125rem;
      width: 0;
      height: 0;
      border-left: solid 0.5rem transparent;
      border-right: solid 0.5rem transparent;
      border-top: solid 0.5rem #fff;
    }
  }
}

.panel-extention {
  p {
    margin-bottom: 0.75rem;
    line-height: 1.125rem;
    a {
      position: relative;
      padding-right: 50px;
    }
  }
}

.section-list {
  padding-bottom: 1rem;
  text-align: left;
  .section-item {
    margin-bottom: 2rem;
    .maomao-img {
      max-height: 18px;
      vertical-align: top;
    }
    .lead {
      margin-bottom: 1rem;
      font-size: 1.875rem;
      line-height: 2.4375rem;
      color: #1c232e;
      font-weight: 600;
      word-break: break-word;
      .maomao-img {
        vertical-align: middle;
      }
      @media (max-width: 850px) {
        font-size: 1.625rem;
        line-height: 2rem;
      }
    }
    p {
      text-align: justify;
      @media (max-width: 590px) {
        margin-bottom: 1rem;
      }
    }
  }
  @media (max-width: 590px) {
    padding-top: 3rem;
  }
}


/*animation download*/

@keyframes icon-bounce {
  from {
    transform: translateY(-5px);
  }
  to {
    transform: translateY(0);
  }
}

@keyframes white-pulse {
  from {
    color: rgba(255, 255, 255, 0.2);
  }
  to {
    color: rgba(255, 255, 255, 0.5);
  }
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

